tests/rosetta/out/Smalltalk/deceptive-numbers.out
/tmp/deceptive-numbers.st:14: parse error, expected ']'
