tests/rosetta/out/Smalltalk/deceptive-numbers.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| isPrime d listToString s i main count limit n repunit eleven hundred deceptive bn |
isPrime := [:n | ((n < 2)) ifTrue: [
false.
] .
((((n % 2)) = 0)) ifTrue: [
(n = 2).
] .
((((n % 3)) = 0)) ifTrue: [
(n = 3).
] .
d := 5.
[(((d * d)) <= n)] whileTrue: [.
((((n % d)) = 0)) ifTrue: [
false.
] .
d := (d + 2).
((((n % d)) = 0)) ifTrue: [
false.
] .
d := (d + 4).
].
.
true. ].
listToString := [:xs | s := '['.
i := 0.
[(i < ((xs size)))] whileTrue: [.
s := (s + ((xs at: i asString))).
((i < ((((xs size)) - 1)))) ifTrue: [
s := (s + (' ')).
] .
i := (i + 1).
].
.
(s + ']'). ].
main := [ count := 0.
limit := 25.
n := 17.
repunit := 1111111111111111.
eleven := 11.
hundred := 100.
deceptive := {}.
[(count < limit)] whileTrue: [.
(((((isPrime value: n not) and: [((((n % 3)) ~= 0))])) and: [((((n % 5)) ~= 0))])) ifTrue: [
bn := n.
((((repunit % bn)) = 0)) ifTrue: [
deceptive := deceptive copyWith: n.
count := (count + 1).
] .
] .
n := (n + 2).
repunit := (((repunit * hundred)) + eleven).
].
.
Transcript show: ((((('The first ') + ((limit asString)))) + (' deceptive numbers are:'))) printString; cr.
Transcript show: (listToString value: deceptive) printString; cr. ].
main value.
